--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,12 @@
     <!-- Nav Bar -->
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
     <div class="container">
-      {% if page.title != "about" %}
       <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/">
-       {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+       {% if site.title == "blank" %}<span class="font-weight-bold">{{
+       site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{%
+       else %}ag<span class="font-weight-bold">mariona</span>{% endif %}
       </a>
-      {% elsif site.enable_navbar_social %}
+      {% if site.enable_navbar_social %}
         <!-- Social Icons -->
         <div class="navbar-brand social">
           {% include social.html %}
@@ -43,7 +44,7 @@
           </li>
           {% endif %}
           <!-- Other pages -->
-          {% assign sorted_pages = site.pages | sort: "title" %}
+          {% assign sorted_pages = site.pages | sort: "sort" %}
           {% for p in sorted_pages %}
           {% if p.nav and p.autogen == nil %}
           {% if p.dropdown %}
