--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,7 +52,8 @@ blockquote {
 
 .profile {
   margin-left: 1rem;
-  width: 100%;
+  width: 30%;
+  min-width: 14rem;
 
   .address {
     margin-bottom: 5px;
