--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,17 +7,19 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
      {{ site.first_name }} {{ site.middle_name}}
-     <span class="font-weight-bold">{{ site.last_name }}</span>
+     {{ site.last_name }}
     </h1>
      <p class="desc">{{ page.description }}</p>
   </header>
 
   <article>
     {% if page.profile %}
-    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
-      {% if page.profile.image %}
-        <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
-      {% endif %}
+    <div class="profile float-{% if page.profile.align == 'left' %}left{% else
+    %}right{% endif %}">
+        {% if page.profile.image %}
+          <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image |
+          prepend: '/assets/img/' | relative_url }}">
+        {% endif %}
       {% if page.profile.address %}
         <div class="address">
           {{ page.profile.address }}
